# birb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_debug.bat
.github/workflows/: main.yml
CLInjector/: CLInjector.csproj  Program.cs
CLInjector/Properties/: AssemblyInfo.cs
Injector/: App.cs  CMakeLists.txt  Injector.cs  Injector.csproj.tmp39c4b  Win32.cs
Injector/Properties/: AssemblyInfo.cs
client/: CMakeLists.txt  build.bat
client/Lib/imgui/: imgui_impl_win32.cpp  imgui_widgets.cpp
client/Libs/: cmake_install.cmake
client/src/: main.cpp
client/src/Hook/: Hook.cpp  Hook.h  HookManager.cpp  HookManager.h
client/src/Hook/Hooks/: Keyboard.cpp  Keyboard.h  UIRenderer.cpp  UIRenderer.h
client/src/Module/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
client/src/Module/Modules/: AutoGG.cpp  AutoGG.h  Cps.cpp  Cps.h  Fps.cpp  Fps.h  UnInject.cpp  UnInject.h  Zoom.cpp  Zoom.h
client/src/SDK/: MinecraftUIRenderContext.h
client/src/Utils/: DrawUtils.h  MathUtils.h  Mem.cpp  Mem.h  MinHook.h  Utils.cpp  Utils.h
client/src/gui/: gui.cpp  gui.h
client/src/gui/assets/fonts/: inter.h  inter_bold.h  material_icons.h
client/src/gui/assets/shaders/: PixelShader.hlsl  VertexShader.hlsl  ps.cso  vs.cso
client/src/gui/menus/: console_menu.cpp  console_menu.h  module_menu.cpp  module_menu.h
client/src/gui/renderer/: dx_manager.cpp  dx_manager.h
client/src/hook/: hook.cpp  hook.h  hook_manager.cpp  hook_manager.h
client/src/hook/hooks/: key_hook.cpp  key_hook.h  mouse_hook.cpp  mouse_hook.h
client/src/module/: module.cpp  module.h  module_manager.cpp  module_manager.h
client/src/module/modules/: cps_mod.cpp  cps_mod.h  test_mod.cpp  test_mod.h
client/src/sdk/: ClientInstance.h  GuiData.h  MinecraftGame.h  MinecraftUIRenderContext.h  ScreenContext.h  Tessellator.h
client/src/ui/: ui.cpp  ui.h
client/src/utils/: Logger.h  global.h  mem.h  ui_thread.h
